--- a/.classpath
+++ b/.classpath
@@ -176,5 +176,6 @@
 	<classpathentry kind="lib" path="D:/siat-code/realODMatrix/lib/geotools-8.5/xml-commons-resolver-1.2.jar"/>
 	<classpathentry kind="lib" path="D:/siat-code/realODMatrix/lib/geotools-8.5/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="D:/siat-code/realODMatrix/lib/geotools-8.5/xsd-2.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/storm-0.8.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
